crates/registry/tests/compile_fail/unsupported_prop_type.stderr
error: #[post_component] v1 supports props of type String, f64, i64, bool, or Option of one of these, plus `children: Children`
       = help: #[post_component] must sit above #[component] or #[island] (no such attribute was found below it)
 --> tests/compile_fail/unsupported_prop_type.rs:5:18
  |
5 | pub fn Bad(data: Vec<String>) {
  |                  ^^^
